--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "css-loader": "^5.2.6",
     "dat.gui": "^0.7.7",
     "file-loader": "^6.2.0",
+    "glslify-import-loader": "^0.1.2",
+    "glslify-loader": "^2.0.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
@@ -24,8 +26,6 @@
     "webpack": "^5.38.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "glslify-import-loader": "^0.1.2",
-    "glslify-loader": "^2.0.0"
+    "webpack-merge": "^5.7.3"
   }
 }
